# custom-wifi-driver-network-integration

./: ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: cpp17-design-patterns-and-solid.md  deep-architecture.md  driver-network-integration-runbook.md  validation-plan.md
docs/design/: README.md  implementation-roadmap.md  interface-control.md  requirements.md  runtime-design.md  system-design.md  validation-plan.md
docs/design/diagrams/: system-design.drawio
docs/diagrams/: README.md  full-system-uml.drawio
include/wifi_integration/: WifiIntegration.hpp
src/: WifiIntegration.cpp  main.c  main.cpp
tests/: ProfileTests.cpp  WifiIntegrationTests.cpp  test_repo_smoke.py
